--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "embla-carousel-react": "^8.2.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.436.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-day-picker": "^9.1.1",
     "react-dom": "^18.3.1",
